src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>loan__Investor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Reinvest_Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reinvest Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Reinvest_Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reinvest Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date (DEPRECATED)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__SLASerialNumber__c</fullName>
        <label>SLA Serial Number (DEPRECATED)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__SLA__c</fullName>
        <label>SLA (DEPRECATED)</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Total_Pay_Off_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field gives the total pay-off amount as of today.</description>
        <inlineHelpText>This is the total pay-off amount of all loans as of today.</inlineHelpText>
        <label>Total Pay Off Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>loan__Total_Returns__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Return on Investment gained by Investor</description>
        <label>Total Returns</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Uncleared_Deposits__c</fullName>
        <label>Uncleared Deposits</label>
        <summarizedField>loan__Investor_Fund_Transaction__c.loan__Transaction_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Transaction_Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Cleared__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Rejected__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Investor_Fund_Transaction__c.loan__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Uncleared_Withdrawals__c</fullName>
        <label>Uncleared Withdrawals</label>
        <summarizedField>loan__Investor_Fund_Transaction__c.loan__Transaction_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Transaction_Amount__c</field>
            <operation>lessOrEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Cleared__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Rejected__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>loan__Investor_Fund_Transaction__c.loan__Reversed__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>loan__Investor_Fund_Transaction__c.loan__Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Undeployed_Funds__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total amount which is available to invest in loans.</description>
        <inlineHelpText>Total amount which is available to invest in loans.</inlineHelpText>
        <label>Available Funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity (DEPRECATED)</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>peer__Access_Token__c</fullName>
        <label>Access Token</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>peer__Amount_In_Funding__c</fullName>
        <label>Amount In Funding</label>
        <summarizedField>peer__Booking_Order__c.peer__Amount_In_Funding__c</summarizedField>
        <summaryForeignKey>peer__Booking_Order__c.peer__Investor__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>peer__Borrower_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Borrower Information</label>
        <referenceTo>peer__Borrower_Information__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Credit_Rating_Matrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Rating Matrix</label>
        <referenceTo>peer__Credit_Rating_Matrix__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>peer__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>peer__External_Id__c</fullName>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>peer__FB_Access_Token__c</fullName>
        <label>FB Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__FB_Image__c</fullName>
        <description>URL of user&apos;s Facebook Image</description>
        <label>FB Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>peer__First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Funds_Available_For_Investment__c</fullName>
        <formula>if( loan__Undeployed_Funds__c != 0,(loan__Undeployed_Funds__c  -  peer__Amount_In_Funding__c ),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount available for further investments.</inlineHelpText>
        <label>Uncommitted Funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>peer__Investor_Status__c</fullName>
        <label>Investor Status</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>peer__IsActiveBorrower__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActiveBorrower</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__IsActiveInvestor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActiveInvestor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__National_Id__c</fullName>
        <label>National Id</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>peer__Nickname__c</fullName>
        <label>Nickname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Password__c</fullName>
        <label>Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Portfolio_Generated_Per_Day__c</fullName>
        <label>Portfolio Generated Per Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Portfolio_Generated_Per_Hour__c</fullName>
        <label>Portfolio Generated Per Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Portfolio_Timestamp__c</fullName>
        <description>Timestamp of last generated portfolio</description>
        <label>Portfolio Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>peer__Sign_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicaztes if the video is already signed</description>
        <label>Sign Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Status__c</fullName>
        <label>Status(Borrower)</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>peer__Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Verified_img__c</fullName>
        <formula>IF (peer__Verified__c, IMAGE(&quot;/img/msg_icons/confirm32.png&quot;, &quot;Verified&quot;),
     IMAGE(&quot;/img/msg_icons/warning32.png&quot;, &quot;Unverified&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verified</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>